--- a/projet site web/PageWeb.html
+++ b/projet site web/PageWeb.html
@@ -16,7 +16,7 @@
   </header>
 
   <div class="categories">
-    <a href="PageWeb.html" class="category">Accueil</a>
+    <a href="index.html" class="category">Accueil</a>
     <a href="pistolet.html" class="category">Pistolet</a>
     <a href="mitraillette.html" class="category">Mitraillette</a>
     <a href="mitrailleuse.html" class="category">Mitrailleuse</a>
