--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Contact</title>
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="site-header">
-    <img src="images/logo.jpg" alt="Logo du site" class="site-logo">
+    <img src="logo.jpg" alt="Logo du site" class="site-logo">
   </header>
   <div class="categories">
     <a href="index.html" class="category">Accueil</a>
