--- a/mitraillette.html
+++ b/mitraillette.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Catégorie Mitraillettes</title>
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
-    <img src="images/logo.jpg" alt="Logo du site" class="site-logo">
+    <img src="logo.jpg" alt="Logo du site" class="site-logo">
   </header>
   <div class="categories">
     <a href="index.html" class="category">Accueil</a>
@@ -29,7 +29,7 @@
   <div class="container-1">
     <div class="card-contain">
       <div class="card" style="width: 18rem;">
-        <img src="images/mp5.jpg" class="card-img-top" alt="MP5">
+        <img src="mp5.jpg" class="card-img-top" alt="MP5">
         <div class="card-body">
           <h5 class="card-title">MP5 Heckler & Koch - 2 500€ </h5>
           <p class="card-text">Mitraillette allemande emblématique, réputée pour sa fiabilité et sa précision. Très utilisée par les forces spéciales.</p>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="images/uzi.jpg" class="card-img-top" alt="UZI">
+        <img src="uzi.jpg" class="card-img-top" alt="UZI">
         <div class="card-body">
           <h5 class="card-title">IMI Uzi - 1 100€</h5>
           <p class="card-text">Compacte et robuste, l'Uzi est idéale pour les combats rapprochés. Facile à manier, elle reste un classique intemporel.</p>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="images/P90.jpg" class="card-img-top" alt="P90">
+        <img src="P90.jpg" class="card-img-top" alt="P90">
         <div class="card-body">
           <h5 class="card-title">FN P90 - 3 000€</h5>
           <p class="card-text">Design futuriste et chargeur de 50 coups. Parfaite pour les environnements confinés et les interventions rapides.</p>
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="images/MAC10.jpg" class="card-img-top" alt="MAC10">
+        <img src="MAC10.jpg" class="card-img-top" alt="MAC10">
         <div class="card-body">
           <h5 class="card-title">MAC-10 - 900€</h5>
           <p class="card-text">Ultra compacte, elle offre une cadence de tir élevée. Appréciée pour sa taille discrète, mais difficile à maîtriser.</p>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="images/vector.jpg" class="card-img-top" alt="vector">
+        <img src="vector.jpg" class="card-img-top" alt="vector">
         <div class="card-body">
           <h5 class="card-title">KRISS Vector - 2 800€ </h5>
           <p class="card-text">Arme moderne au design unique, réputée pour son faible recul et sa précision en tir automatique.</p>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="images/scorpion.jpg" class="card-img-top" alt="scorpion">
+        <img src="scorpion.jpg" class="card-img-top" alt="scorpion">
         <div class="card-body">
           <h5 class="card-title">Scorpion EVO 3 - 1 700€ </h5>
           <p class="card-text">Compacte, légère et modulable, cette mitraillette tchèque est parfaite pour les interventions tactiques.</p>
