--- a/mitrailleuse.html
+++ b/mitrailleuse.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Catégorie Mitrailleuses</title>
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
-    <img src="images/logo.jpg" alt="Logo du site" class="site-logo">
+    <img src="logo.jpg" alt="Logo du site" class="site-logo">
   </header>
   <div class="categories">
     <a href="index.html" class="category">Accueil</a>
@@ -26,7 +26,7 @@
   <div class="container-1">
   <div class="card-contain">
     <div class="card" style="width: 18rem;">
-      <img src="images/m249.jpg" class="card-img-top" alt="M249">
+      <img src="m249.jpg" class="card-img-top" alt="M249">
       <div class="card-body">
         <h5 class="card-title">M249 SAW - 4000</h5>
         <p class="card-text">...................</p>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="images/m60.jpg" class="card-img-top" alt="M60">
+      <img src="m60.jpg" class="card-img-top" alt="M60">
       <div class="card-body">
         <h5 class="card-title">M60 - 4500€</h5>
         <p class="card-text">...................</p>
