--- a/panier.html
+++ b/panier.html
@@ -142,9 +142,9 @@
 
   <script>
     const produits = {
-      "Tee-shirt Noir": "images/tee-shirt-noir.jpg",
-      "Tee-shirt Blanc": "images/tee-shirt-blanc.jpg",
-      "Casquette": "images/casquette.jpg"
+      "Tee-shirt Noir": "tee-shirt-noir.jpg",
+      "Tee-shirt Blanc": "tee-shirt-blanc.jpg",
+      "Casquette": "casquette.jpg"
     };
 
     let panier = JSON.parse(localStorage.getItem("panier")) || [];
