--- a/pistolet.html
+++ b/pistolet.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Catégorie Pistolets</title>
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
-    <img src="images/logo.jpg" alt="Logo du site" class="site-logo">
+    <img src="logo.jpg" alt="Logo du site" class="site-logo">
   </header>
   <div class="categories">
     <a href="index.html" class="category">Accueil</a>
@@ -30,7 +30,7 @@
   <div class="container-1">
     <div class="card-contain">
       <div class="card" style="width: 18rem;">
-        <img src="images/glock17.jpg" class="card-img-top" alt="glock17">
+        <img src="glock17.jpg" class="card-img-top" alt="glock17">
         <div class="card-body">
           <h5 class="card-title">Glock 17 ~ 600€</h5>
           <p class="card-text"></p>
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="images/beretta92.jpg" class="card-img-top" alt="M60">
+        <img src="beretta92.jpg" class="card-img-top" alt="M60">
         <div class="card-body">
           <h5 class="card-title">Beretta 92 ~ 720€</h5>
           <p class="card-text">...................</p>
