--- a/sniper.html
+++ b/sniper.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Catégorie Snipers</title>
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
-    <img src="images/logo.jpg" alt="Logo du site" class="site-logo">
+    <img src="logo.jpg" alt="Logo du site" class="site-logo">
   </header>
   <div class="categories">
     <a href="index.html" class="category">Accueil</a>
@@ -29,7 +29,7 @@
 <div class="container-1">
 <div class="card-contain">
   <div class="card" style="width: 18rem;">
-    <img src="images/awp.jpg" class="card-img-top" alt="AWP">
+    <img src="awp.jpg" class="card-img-top" alt="AWP">
     <div class="card-body">
       <h5 class="card-title">AWP Arctic Warfare - 6000€</h5>
       <p class="card-text">Fusil à verrou britannique très précis, célèbre dans les forces spéciales et les jeux vidéo comme CS:GO</p>
@@ -38,7 +38,7 @@
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="images/barrett.jpg" class="card-img-top" alt="Barret M82">
+    <img src="barrett.jpg" class="card-img-top" alt="Barret M82">
     <div class="card-body">
       <h5 class="card-title">Barrett M82 - 9 000€</h5>
       <p class="card-text">Très puissant, utilisé pour le tir anti-matériel.</p>
@@ -47,7 +47,7 @@
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="images/tikkaT3X.jpg" class="card-img-top" alt="Tikka T3X TAC">
+    <img src="tikkaT3X.jpg" class="card-img-top" alt="Tikka T3X TAC">
     <div class="card-body">
       <h5 class="card-title">TIKKA T3X TAC A1 - 3 000€</h5>
       <p class="card-text">Sniper finlandais moderne, modulable et précis, utilisé en tir sportif et par certaines forces tactiques.</p>
@@ -56,7 +56,7 @@
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="images/CheyTacIntervention.jpg" class="card-img-top" alt="CheyTacIntervention">
+    <img src="CheyTacIntervention.jpg" class="card-img-top" alt="CheyTacIntervention">
     <div class="card-body">
       <h5 class="card-title">CheyTac M200 Intervention</h5>
       <p class="card-text">Conçu pour des tirs à très longue distance (+2 km).</p>
@@ -65,7 +65,7 @@
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="images/internacionalAXMC.jpg" class="card-img-top" alt="internacionalAXMC">
+    <img src="internacionalAXMC.jpg" class="card-img-top" alt="internacionalAXMC">
     <div class="card-body">
       <h5 class="card-title">Accuracy International AXMC</h5>
       <p class="card-text">Modulaire, très précis, utilisé par plusieurs forces spéciales.</p>
@@ -74,7 +74,7 @@
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="images/T-5000.jpg" class="card-img-top" alt="T-5000">
+    <img src="T-5000.jpg" class="card-img-top" alt="T-5000">
     <div class="card-body">
       <h5 class="card-title">Orsis T-5000</h5>
       <p class="card-text">Sniper moderne russe de haute précision.</p>
