--- a/fusil.html
+++ b/fusil.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Catégorie Fusils à pompe</title>
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
-    <img src="images/logo.jpg" alt="Logo du site" class="site-logo">
+    <img src="logo.jpg" alt="Logo du site" class="site-logo">
   </header>
   <div class="categories">
     <a href="index.html" class="category">Accueil</a>
@@ -27,7 +27,7 @@
   <div class="container-1">
     <div class="card-contain">
       <div class="card" style="width: 18rem;">
-        <img src="images/remington870.jpg" class="card-img-top" alt="reming870">
+        <img src="remington870.jpg" class="card-img-top" alt="reming870">
         <div class="card-body">
           <h5 class="card-title">Remington 870 - 850€</h5>
           <p class="card-text">...................</p>
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="images/spas12.jpg" class="card-img-top" alt="SPAS12">
+        <img src="spas12.jpg" class="card-img-top" alt="SPAS12">
         <div class="card-body">
           <h5 class="card-title">SPAS-12 - 1 300€</h5>
           <p class="card-text">...................</p>
