--- a/mitraillette.html
+++ b/mitraillette.html
@@ -29,7 +29,7 @@
   <div class="container-1">
     <div class="card-contain">
       <div class="card" style="width: 18rem;">
-        <img src="mp5.jpg" class="card-img-top" alt="MP5">
+        <img src="MP5.jpg" class="card-img-top" alt="MP5">
         <div class="card-body">
           <h5 class="card-title">MP5 Heckler & Koch - 2 500€ </h5>
           <p class="card-text">Mitraillette allemande emblématique, réputée pour sa fiabilité et sa précision. Très utilisée par les forces spéciales.</p>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="uzi.jpg" class="card-img-top" alt="UZI">
+        <img src="UZI.jpg" class="card-img-top" alt="UZI">
         <div class="card-body">
           <h5 class="card-title">IMI Uzi - 1 100€</h5>
           <p class="card-text">Compacte et robuste, l'Uzi est idéale pour les combats rapprochés. Facile à manier, elle reste un classique intemporel.</p>
