--- a/mitrailleuse.html
+++ b/mitrailleuse.html
@@ -26,7 +26,7 @@
   <div class="container-1">
   <div class="card-contain">
     <div class="card" style="width: 18rem;">
-      <img src="m249.jpg" class="card-img-top" alt="M249">
+      <img src="M249.jpg" class="card-img-top" alt="M249">
       <div class="card-body">
         <h5 class="card-title">M249 SAW - 4000</h5>
         <p class="card-text">...................</p>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="m60.jpg" class="card-img-top" alt="M60">
+      <img src="M60.jpg" class="card-img-top" alt="M60">
       <div class="card-body">
         <h5 class="card-title">M60 - 4500€</h5>
         <p class="card-text">...................</p>
