--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Catalogue d’armes à feu en ligne : pistolets, fusils, mitraillettes, snipers, et plus. Explorez notre boutique spécialisée.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Le catalogue des armes à feu</title>
