--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Catalogue d’armes à feu en ligne : pistolets, fusils, mitraillettes, snipers, et plus. Explorez notre boutique spécialisée.">
+  <meta name="google-site-verification" content="xH1M-LNgQ440o3gWj44S_CklNW93DNX9cbQBuUYx1GY" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Le catalogue des armes à feu</title>
