--- a/mitraillette.html
+++ b/mitraillette.html
@@ -33,7 +33,7 @@
         <div class="card-body">
           <h5 class="card-title">MP5 Heckler & Koch - 2 500€ </h5>
           <p class="card-text">Mitraillette allemande emblématique, réputée pour sa fiabilité et sa précision. Très utilisée par les forces spéciales.</p>
-          <a href="#" class="btn btn-primary">Voir plus</a>
+          <a href="https://fr.wikipedia.org/wiki/Uzi" target="_blank" class="btn btn-primary">Voir plus</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
