--- a/mitraillette.html
+++ b/mitraillette.html
@@ -41,7 +41,7 @@
         <div class="card-body">
           <h5 class="card-title">IMI Uzi - 1 100€</h5>
           <p class="card-text">Compacte et robuste, l'Uzi est idéale pour les combats rapprochés. Facile à manier, elle reste un classique intemporel.</p>
-          <a href="#" class="btn btn-primary">Voir plus</a>
+          <a href="https://fr.wikipedia.org/wiki/Uzi" target="_blank" class="btn btn-primary">Voir plus</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
