--- a/sniper.html
+++ b/sniper.html
@@ -33,7 +33,7 @@
     <div class="card-body">
       <h5 class="card-title">AWP Arctic Warfare - 6000€</h5>
       <p class="card-text">Fusil à verrou britannique très précis, célèbre dans les forces spéciales et les jeux vidéo comme CS:GO</p>
-      <a href="#" class="btn btn-primary">Voir plus</a>
+      <a href="https://en.wikipedia.org/wiki/Accuracy_International_AWM" target="_blank" class="btn btn-primary">Voir plus</a>
     </div>
   </div>
 
@@ -42,7 +42,7 @@
     <div class="card-body">
       <h5 class="card-title">Barrett M82 - 9 000€</h5>
       <p class="card-text">Très puissant, utilisé pour le tir anti-matériel.</p>
-      <a href="#" class="btn btn-primary">Voir plus</a>
+      <a href="https://fr.wikipedia.org/wiki/Barrett_M82" target="_blank" class="btn btn-primary">Voir plus</a>
     </div>
   </div>
 
@@ -51,7 +51,7 @@
     <div class="card-body">
       <h5 class="card-title">TIKKA T3X TAC A1 - 3 000€</h5>
       <p class="card-text">Sniper finlandais moderne, modulable et précis, utilisé en tir sportif et par certaines forces tactiques.</p>
-      <a href="#" class="btn btn-primary">Voir plus</a>
+      <a href="	https://www.tikka.fi/en-us/rifles/tikka-t3x/t3x-tac-a1" target="_blank" class="btn btn-primary">Voir plus</a>
     </div>
   </div>
 
@@ -60,7 +60,7 @@
     <div class="card-body">
       <h5 class="card-title">CheyTac M200 Intervention</h5>
       <p class="card-text">Conçu pour des tirs à très longue distance (+2 km).</p>
-      <a href="#" class="btn btn-primary">Voir plus</a>
+      <a href="<a href="	https://www.tikka.fi/en-us/rifles/tikka-t3x/t3x-tac-a1" target="_blank" class="btn btn-primary">Voir plus</a>" target="_blank" class="btn btn-primary">Voir plus</a>
     </div>
   </div>
 
