--- a/sniper.html
+++ b/sniper.html
@@ -51,7 +51,7 @@
     <div class="card-body">
       <h5 class="card-title">TIKKA T3X TAC A1 - 3 000€</h5>
       <p class="card-text">Sniper finlandais moderne, modulable et précis, utilisé en tir sportif et par certaines forces tactiques.</p>
-      <a href="	https://www.tikka.fi/en-us/rifles/tikka-t3x/t3x-tac-a1" target="_blank" class="btn btn-primary">Voir plus</a>
+      <a href="https://www.tikka.fi/en-us/rifles/tikka-t3x/t3x-tac-a1" target="_blank" class="btn btn-primary">Voir plus</a>
     </div>
   </div>
 
@@ -60,7 +60,7 @@
     <div class="card-body">
       <h5 class="card-title">CheyTac M200 Intervention</h5>
       <p class="card-text">Conçu pour des tirs à très longue distance (+2 km).</p>
-      <a href="<a href="	https://www.tikka.fi/en-us/rifles/tikka-t3x/t3x-tac-a1" target="_blank" class="btn btn-primary">Voir plus</a>" target="_blank" class="btn btn-primary">Voir plus</a>
+      <a href="	https://www.tikka.fi/en-us/rifles/tikka-t3x/t3x-tac-a1" target="_blank" class="btn btn-primary">Voir plus</a>" target="_blank" class="btn btn-primary">Voir plus</a>
     </div>
   </div>
 
